--- a/application-prod.properties
+++ b/application-prod.properties
@@ -39,7 +39,7 @@ server.port=${PORT:8080}
 spring.main.allow-circular-references=true
 
 # CORS Settings
-spring.web.cors.allowed-origins=${ALLOWED_ORIGINS:https://your-frontend-domain.com}
+spring.web.cors.allowed-origins=${ALLOWED_ORIGINS:https://expensetracker-fys6.onrender.com}
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true 
