--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,8 +60,14 @@ spring.datasource.hikari.data-source-properties.prepareThreshold=0
 # -------------------------------------------
 spring.main.allow-circular-references=true
 
+# Logging Configuration
+logging.level.com.fullStack.expenseTracker.security=DEBUG
+logging.level.com.fullStack.expenseTracker.security.jwt=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web.filter.OncePerRequestFilter=DEBUG
+
 # JWT Settings
-app.jwtSecret= ======================expense=tracker=mywallet===========================
+app.jwtSecret=expense-tracker-mywallet-secret-key-2024
 app.jwtExpirationMs=86400000
 
 # Email Settings (Gmail)
